# Haskelltesting

./: .gitignore  0test.hs  2test.hs  3test.hs  4test.hs  5test.hs  6test.hs  7test  7test.hs  8test.hs  9test.hs  CompAlg.hs  ConstraintKindsExample.hs  README.md  a.out  anothergaussian.hs  arrowpar.hs  change_anime.hs  complex.hs  exercises.hs  gaussian.hs  geometry.hs  helloworld.hs  hw_geoclasses.hs  math.hs  nloglogn.c  oneWorder.hs  test.hs  thoughts.txt  votingmath.hs  workingGaussian.hs
AnimeMod/: AnimeMod.cabal  cabal.sandbox.config  parsable_anime.txt
AnimeMod/app/: Main.hs  Parser.hs
AnimeMod/src/: Anime.hs  General.hs
AnimeMod/src/Anime/: Files.hs  Menu.hs  Stats.hs  Types.hs
AnimeMod/src/Anime/Files/: New.hs  Old.hs
AnimeMod/src/Anime/Menu/: New.hs  Old.hs
AnimeMod/src/Anime/Types/: New.hs  Old.hs
AnimeMod/test/: Spec.hs
ProjectEuler/: Problems1_23.hs  problems.hs  rsa.hs
fleet-maneuver/: fleet-maneuver.cabal  stack.yaml
fleet-maneuver/src/: Field.hs
python/: pythontesting.py  test.py
rusttest/: main  main.rs
rusttest/cards/: Cargo.toml
rusttest/cards/src/: main.rs
rusttest/greprs/: Cargo.toml
rusttest/greprs/src/: lib.rs  main.rs
rusttest/guessing_game/: Cargo.toml
rusttest/guessing_game/src/: main.rs
viztest/: cabal.sandbox.config  viztest.cabal
viztest/app/: .Main.hs.swp  Main.hs
viztest/src/: Bindings.hs  Cube.hs  Display.hs  Points.hs
