name:                AnimeMod
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Easy management tool for a long list of Animes
homepage:            http://github.com/githubuser/AnimeMod#readme
license:             BSD3
license-file:        LICENSE
author:              Felix Karg
maintainer:          f.karg10@gmail.com
copyright:           2016 Felix Karg
category:            Management
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Anime.Types.New
                     , Anime.Types.Old
                     , Anime.Stats
                     , Anime.Files.New
                     , Anime.Files.Old
                     , Anime.Menu.New
                     , Anime.Menu.Old
                     , General
  build-depends:       base == 4.*
                     , binary
                     , directory
                     , vector
                     , vector-binary-instances
                     , text
                     , text-binary
  default-language:    Haskell2010

executable AnimeMod-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -Wall -Werror -fwarn-tabs -fwarn-implicit-prelude
  build-depends:       base
                     , AnimeMod
                     , binary
                     , vector
                     , text
  default-language:    Haskell2010

executable AnimeParser
  hs-source-dirs:      app
  main-is:             Parser.hs
  ghc-options:         -rtsopts -Wall -Werror -fwarn-tabs -fwarn-implicit-prelude
  build-depends:       base
                     , AnimeMod
                     , binary
  default-language:    Haskell2010

test-suite AnimeMod-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AnimeMod
  ghc-options:         -rtsopts -Wall -Werror -fwarn-tabs -fwarn-implicit-prelude
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blueburningcoder/AnimeMod
